<resources>
    <string name="app_name">OpenHourlyChime</string>
    <string name="str1">Start Chime Service</string>
    <string name="str2">Stop Chime Service</string>
    <string name="str3">Test Chime</string>
    <string name="str9">Settings</string>
    <string name="str10">Home</string>
    <string name="str11">Settings</string>
    <string name="nav_head_icon">nav_head_icon</string>
    <string name="welcome">Welcome to use OpenHourlyChime!</string>
    <string name="msg2">Author: privateAccountOfLiu</string>
    <string name="msg3">Version: 1.2.3\n</string>
    <string name="msg4">Github:</string>
    <string name="msg5">https://github.com/privateAccountOfLiu</string>
    <string name="msg6">/OpenHourlyChime\n</string>
    <string name="msg7">Notice：</string>
    <string name="msg8">Production is not easy. If you like it, please give it a star.</string>
    <string name="msg9">This software is an open-source project. Please do not use it for commercial purposes.</string>
    <string name="msg10">Final interpretation rights reserved by the author.</string>
    <string name="str12">About</string>
    <string name="set1">General Settings</string>
    <string name="set2">Allow the app to send notifications</string>
    <string name="set3">Enable Notifications</string>
    <string name="set4">Volume Control</string>
    <string name="set5">Perform Test Chime</string>
    <string name="set6">Advanced Settings</string>
    <string name="set7">App Theme</string>
    <string name="set8">Record Basic Information</string>
    <string name="set9">Record Detailed Debug Information</string>
    <string name="set10">Enable Advanced Logging</string>
    <string name="set11">View app version and developer information</string>
    <string name="set12">About the App</string>
    <string name="set13">Start Time</string>
    <string name="set14">End Time</string>
    <string name="set15">Chime Time Range</string>
    <string name="toast_1">Changes saved successfully</string>
    <string name="toast_2">Performing test chime</string>
    <string name="toast_3">Start time cannot be later than end time</string>
    <string name="notice_1">Hourly Chime Service Running</string>
    <string name="notice_2">Will announce the time at the top of every hour</string>
    <string name="TTS_1">Hourly chime: It is now {%1$s} midnight 12 o\'clock sharp</string>
    <string name="TTS_2">Hourly chime: It is now {%1$s} noon 12 o\'clock sharp</string>
    <string name="TTS_3">Hourly chime: It is now {%1$s} %2$d o\'clock sharp</string>
    <string name="TTS_4">Test chime: It is now %1$s %2$d:%3$d</string>
    <string name="TTS_5">Hourly chime: It is now {%1$s} %2$d %3$s</string>
    <string name="notice_3">Hourly Chime</string>
    <string name="channel_1">Hourly Chime Service</string>
    <string name="channel_2">Background Service Status Notification</string>
    <string name="channel_3">Chime Reminder</string>
    <string name="channel_4">Hourly Chime Reminder</string>
    <string name="time_range_dialog_title">Select Time Range</string>
    <string name="Yes">Confirm</string>
    <string name="Cancel">Cancel</string>
    <string name="toast_4">Normal permissions are required for full functionality</string>
    <string name="toast_5">Hourly chime service started</string>
    <string name="toast_6">Failed to get permissions, please set manually!</string>
    <string name="toast_7">Hourly chime service stopped</string>
    <string name="dialog_white_list_battery_title">Background Running Permission</string>
    <string name="dialog_white_list_battery_msg">To ensure the app runs in the background, please enable the battery optimization whitelist and auto-start permission.</string>
    <string name="ToSet">Go to Settings</string>
    <string name="array_media_player">Media Volume Control</string>
    <string name="array_notification_player">Notification Volume Control</string>
    <string name="array_alarm_player">Alarm Volume Control</string>
    <string name="common_theme">Light Theme</string>
    <string name="night_theme">Dark Theme</string>
    <string name="Chinese">中文</string>
    <string name="English">English</string>
    <string name="set16">Language</string>
    <string name="set17">Time Format</string>
    <string name="format_12h">12-Hour Format</string>
    <string name="format_24h">24-Hour Format</string>
    <string name="set18">Chime Mode</string>
    <string name="chime_mode_tts">Text-to-Speech</string>
    <string name="chime_mode_custom">Custom Sound</string>
    <string name="set19">Chime Sound</string>
    <string name="chime_builtin_bell">Bell</string>
    <string name="chime_builtin_gong">Gong</string>
    <string name="chime_builtin_chime">Chime</string>
    <string name="chime_system_pick">Choose from system sounds…</string>
    <string name="toast_8">Exact alarm permission is required for hourly chime</string>
    <string name="dialog_need_restart_title">Need To Restart</string>
    <string name="dialog_need_restart_msg">This item needs to be restarted to take effect</string>
    <string name="logs_title">Logs</string>
    <string name="log_copy">Copy All</string>
    <string name="log_clear">Clear</string>
    <string name="log_copied">Logs copied to clipboard</string>
    <string name="log_cleared">Logs cleared</string>
    <string name="log_empty">No log entries yet. Warnings and errors will appear here.</string>
</resources>
