<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    app:layout="@layout/activity_settings">

    <PreferenceCategory app:title="@string/set1">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="notifications_enabled"
            app:summary="@string/set2"
            app:title="@string/set3" />

        <ListPreference
            app:entries="@array/sound_choice_entries"
            app:entryValues="@array/sound_choice_values"
            app:defaultValue="media_sound_control"
            app:key="sound_preference"
            app:title="@string/set4"
            app:summary="%s"
            app:useSimpleSummaryProvider="true"  />

        <com.privacyaccountofliu.openhourlychime.widget.TimeRangePreference
            app:key="time_range_preference"
            app:title="@string/set15"
            app:summary="%s"
            app:useSimpleSummaryProvider="true"/>

        <Preference
            app:key="test_broad_cast_preference"
            app:summary="@string/set5"
            app:title="@string/str3">
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/set6">

        <ListPreference
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:defaultValue="common_theme"
            app:key="theme_preference"
            app:summary="%s"
            app:title="@string/set7"
            app:useSimpleSummaryProvider="true" />

        <CheckBoxPreference
            app:defaultValue="false"
            app:key="advanced_logging"
            app:summaryOff="@string/set8"
            app:summaryOn="@string/set9"
            app:title="@string/set10" />

    </PreferenceCategory>

    <Preference
        app:key="about_preference"
        app:summary="@string/set11"
        app:title="@string/set12">
    </Preference>

</PreferenceScreen>
