<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:gravity="center">

    <ImageView
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:contentDescription="@string/nav_head_icon"
        android:src="@mipmap/ic_launcher_foreground" />

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/purple_500"
        android:alpha="0.7"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/textViewMsg1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:fitsSystemWindows="true"
        android:gravity="center"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/textViewMsg2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg2"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/nav_head_icon"
            android:src="@drawable/hatsune_miku" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewMsg3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg3"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textViewMsgUrl_T"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg4"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textViewMsgUrl_C_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg5"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textViewMsgUrl_C_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg6"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textViewMsgNotice_T"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg7"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textViewMsgNotice_C_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg8"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textViewMsgNotice_C_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg9"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textViewMsgNotice_C_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg10"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/purple_500"
        android:alpha="0.7"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="128dp"/>
</LinearLayout>